--- a/muscleforgeproject/muscleforge/templates/muscleforge/exercise_form.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/exercise_form.html
@@ -5,7 +5,7 @@
         <form method="post">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Add Exercise</legend>
+                <legend class="border-bottom mb-4">{{ action }} Exercise</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
