--- a/muscleforgeproject/muscleforge/templates/muscleforge/workoutplan_form.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/workoutplan_form.html
@@ -5,7 +5,7 @@
         <form method="post">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Add a Workout Plan</legend>
+                <legend class="border-bottom mb-4">{{ action }} a Workout Plan</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
