Finished all views for workout session and it's exercises

--- a/muscleforgeproject/muscleforge/templates/muscleforge/base.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/base.html
@@ -100,7 +100,13 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-
+                    
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="{% url 'muscleforge-home' %}">Home</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'muscleforge-home' %}">Home</a></li>
+                    </ol>
+                    
+                    
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
@@ -152,16 +158,6 @@
             </div>
             <!-- End of Main Content -->
 
-            <!-- Footer -->
-            <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Dominik Ivošić</span>
-                    </div>
-                </div>
-            </footer>
-            <!-- End of Footer -->
-
         </div>
         <!-- End of Content Wrapper -->
 
@@ -205,6 +201,8 @@
 
     <!-- Font Awesome kit-->
     <script src="https://kit.fontawesome.com/6695ee7bb1.js" crossorigin="anonymous"></script>
+
+    {% block javascript %}{% endblock javascript %}
 
 </body>
 
