--- a/muscleforgeproject/muscleforge/templates/muscleforge/workoutplan_list.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/workoutplan_list.html
@@ -1,10 +1,12 @@
 {% extends "muscleforge/base.html" %}
 {% block content %}
     <div class="container">
+      <h2 class="text-center">Your Workout Plans</h2>
+      <hr class="hr" />
         <div class="row">
             {% for workoutplan in workoutplans %}
               <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card mt-4" style="width: 18rem;">
                   <div class="card-body">
                     <h5 class="card-title"><a href="{% url 'workoutplan-detail' workoutplan.id %}" class="text-decoration-none">{{ workoutplan.title }}</a></h5>                  
                     <h6 class="card-subtitle mb-2 text-muted">{{ workoutplan.start_date }} - {{ workoutplan.end_date }}</h6>
@@ -18,6 +20,10 @@
                 </div>
               </div>
             {% endfor %}
-          </div>     
+          </div>
+          <hr class="hr" />
+          <div class="text-center">
+            <a href="{% url 'workoutplan-new' %}" class="btn btn-success mt-3">Add New Workout Plan</a>
+          </div>
     </div>
 {% endblock content %}
