--- a/muscleforgeproject/muscleforge/templates/muscleforge/workoutsession_form.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/workoutsession_form.html
@@ -1,45 +1,71 @@
 {% extends "muscleforge/base.html" %}
-{% load crispy_forms_tags %} 
+{% load crispy_forms_tags %}
+{% load static %}
+
 {% block content %}
 <div class="container">
+    <legend class="border-bottom mb-4 mt-4">Workout Session Details</legend>
     <form method="post" id="workoutSessionForm">
         {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Add Workout Session</legend>
-            {{ form|crispy }}
-            <div class="form-row">
-                <div class="col">
-                    <label for="hours">Hours:</label>
-                    <input type="number" id="hours" class="form-control" name="hours" min="0" value="0">
-                </div>
-                <div class="col">
-                    <label for="minutes">Minutes:</label>
-                    <input type="number" id="minutes" class="form-control" name="minutes" min="0" max="59" value="0">
-                </div>
-                <div class="col">
-                    <label for="seconds">Seconds:</label>
-                    <input type="number" id="seconds" class="form-control" name="seconds" min="0" max="59" value="0">
-                </div>
-                <input type="hidden" id="duration" name="duration">
+        {{ form|crispy }}
+    
+        <div id="duration-fields" class="form-row">
+            <div class="col">
+                <label for="hours">Hours:</label>
+                <input type="number" id="hours" class="form-control" name="hours" min="0"
+                {% if hours %}
+                    value="{{ hours }}"
+                {% endif %}
+                    value="0" 
+                >
             </div>
-        </fieldset>
-        <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Save</button>
+            <div class="col">
+                <label for="minutes">Minutes:</label>
+                <input type="number" id="minutes" class="form-control" name="minutes" min="0" max="59"
+                {% if minutes %}
+                    value="{{ minutes }}"
+                {% endif %}
+                    value="0"
+                
+                >
+            </div>
+            <div class="col">
+                <label for="seconds">Seconds:</label>
+                <input type="number" id="seconds" class="form-control" name="seconds" min="0" max="59" 
+                {% if seconds %}
+                    value="{{ seconds }}"
+                {% endif %}
+                    value="0"
+                
+                >
+            </div>
         </div>
+        <input type="hidden" id="duration" name="duration" value="">
+
+        <div id="formset" data-formset-prefix="{{ formset.prefix }}">
+            <legend class="border-bottom mb-4 mt-4">Exercise Details</legend>
+            {{ formset.management_form }}
+            {% for form in formset %}
+                <div class="formset-row">
+                    {{ form|crispy }}
+                    <button type="button" class="delete-row btn btn-danger mb-4">Remove</button>
+                </div>
+            {% endfor %}
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                <button type="button" id="add-row" class="btn btn-primary mt-2">Add Exercise</button>
+            </div>
+        </div>
+    
+        <input type="submit" value="Save" class="btn btn-success mt-3 mb-4">
     </form>
 </div>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-    const form = document.getElementById("workoutSessionForm");
-    form.addEventListener("submit", function(e) {
-        e.preventDefault();
-        const hours = document.getElementById("hours").value.padStart(2, '0');
-        const minutes = document.getElementById("minutes").value.padStart(2, '0');
-        const seconds = document.getElementById("seconds").value.padStart(2, '0');
-        // Combine hours, minutes, and seconds
-        document.getElementById("duration").value = `${hours}:${minutes}:${seconds}`;
-        this.submit(); // Proceed with the form submission
-    });
-});
-</script>
+
 {% endblock content %}
+
+{% block javascript %}
+    <script src="{% static 'muscleforge/js/dynamic_formsets.js' %}"></script>
+    <script src="{% static 'muscleforge/js/duration.js' %}"></script>
+{% endblock javascript %}
