Added a register view

--- a/muscleforgeproject/muscleforge/templates/muscleforge/base.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/base.html
@@ -152,7 +152,13 @@
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
-
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
                 {% block content %}{% endblock content %}
 
             </div>
