--- a/muscleforgeproject/muscleforge/templates/muscleforge/workoutplan_list.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/workoutplan_list.html
@@ -2,16 +2,20 @@
 {% block content %}
     <div class="container">
       <h2 class="text-center">Your Workout Plans</h2>
+      <div class="text-center">
+        <a href="{% url 'workoutplan-new' %}" class="btn btn-success mt-3">Add Workout Plan</a>
+      </div>
       <hr class="hr" />
-        <div class="row">
+      <div class="row">
+          {% if workoutplans %}
             {% for workoutplan in workoutplans %}
-              <div class="col-md-4">
-                <div class="card mt-4" style="width: 18rem;">
-                  <div class="card-body">
-                    <h5 class="card-title"><a href="{% url 'workoutplan-detail' workoutplan.id %}" class="text-decoration-none">{{ workoutplan.title }}</a></h5>                  
-                    <h6 class="card-subtitle mb-2 text-muted">{{ workoutplan.start_date }} - {{ workoutplan.end_date }}</h6>
-                    <p class="card-text">{{ exercise.description }}</p>
-                    {% if workoutplan.status %}
+                <div class="col-md-4">
+                  <div class="card mt-4" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title"><a href="{% url 'workoutplan-detail' workoutplan.id %}" class="text-decoration-none">{{ workoutplan.title }}</a></h5>                  
+                      <h6 class="card-subtitle mb-2 text-muted">{{ workoutplan.start_date }} - {{ workoutplan.end_date }}</h6>
+                      <p class="card-text">{{ exercise.description }}</p>
+                      {% if workoutplan.status %}
                         <p class="card-text"><small class="text-muted">Status: Completed</small></p>
                     {% else %}
                         <p class="card-text"><small class="text-muted">Status: Not Completed</small></p>
@@ -20,10 +24,12 @@
                 </div>
               </div>
             {% endfor %}
-          </div>
-          <hr class="hr" />
-          <div class="text-center">
-            <a href="{% url 'workoutplan-new' %}" class="btn btn-success mt-3">Add New Workout Plan</a>
-          </div>
+            </div>
+          {% else %}
+            </div>
+            <div class="text-center">
+              <h4 class="mt-4">No workout plans created</h4>
+            </div> 
+          {% endif %}
     </div>
 {% endblock content %}
