--- a/muscleforgeproject/muscleforge/templates/muscleforge/workoutsession_detail.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/workoutsession_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Workout Session Detail</h2>
+    <h2>Workout Session Details</h2>
     <div class="card">
         <div class="card-body">
             <h3 class="card-title">Session on {{ workout_session.date|date:"F d, Y" }}</h3>
