--- a/muscleforgeproject/muscleforge/templates/muscleforge/workoutplan_list.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/workoutplan_list.html
@@ -16,9 +16,9 @@
                       <h6 class="card-subtitle mb-2 text-muted">{{ workoutplan.start_date }} - {{ workoutplan.end_date }}</h6>
                       <p class="card-text">{{ exercise.description }}</p>
                       {% if workoutplan.status %}
-                        <p class="card-text"><small class="text-muted">Status: Completed</small></p>
+                        <p class="card-text">Status: <span class="text-success">Completed</span></p>
                     {% else %}
-                        <p class="card-text"><small class="text-muted">Status: Not Completed</small></p>
+                        <p class="card-text">Status: <span class="text-danger">Not Completed</span></small></p>
                     {% endif %}
                   </div>
                 </div>
