Added views for goal model, other minor changes

--- a/muscleforgeproject/muscleforge/templates/muscleforge/base.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/base.html
@@ -63,6 +63,9 @@
                 <a class="nav-link" href="{% url "exercise-list" %}">
                     <i class="fa-solid fa-dumbbell"></i>
                     <span>Exercises</span></a>
+                <a class="nav-link" href="{% url "goal-list" %}">
+                    <i class="fa-solid fa-trophy"></i>
+                    <span>Goals</span></a>
             </li>
 
 
