--- a/muscleforgeproject/muscleforge/templates/muscleforge/goal_list.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/goal_list.html
@@ -29,7 +29,7 @@
           {% else %}
             </div>
             <div class="text-center">
-              <h4 class="mt-4">No goals</h4>
+              <h4 class="mt-4">There are currently no goals</h4>
             </div> 
           {% endif %}
     </div>
