--- a/muscleforgeproject/muscleforge/templates/muscleforge/exercise_list.html
+++ b/muscleforgeproject/muscleforge/templates/muscleforge/exercise_list.html
@@ -5,32 +5,39 @@
     <div class="text-center">
       <a href="{% url 'exercise-new' %}" class="btn btn-success mt-2 mb-2">Add Exercise</a>
     </div>
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Difficulty</th>
-            <th scope="col">Type</th>
-            <th scope="col">Equipment</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for exercise in exercises %}
-          <tr>
-            <td>{{ exercise.name }}</td>
-            <td>{{ exercise.description }}</td>
-            <td>{{ exercise.difficulty_level }}</td>
-            <td>{{ exercise.exercise_type }}</td>
-            <td>{{ exercise.equipment_needed }}</td>
-            <td>
-              <a class="btn btn-primary btn-sm" href="{% url 'exercise-update' exercise.id %}">Update</a>
-              <a class="btn btn-danger btn-sm " href="{% url 'exercise-delete' exercise.id %}">Delete</a>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-    </table>
+    {% if exercises %}
+
+      <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Description</th>
+              <th scope="col">Difficulty</th>
+              <th scope="col">Type</th>
+              <th scope="col">Equipment</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for exercise in exercises %}
+            <tr>
+              <td>{{ exercise.name }}</td>
+              <td>{{ exercise.description }}</td>
+              <td>{{ exercise.difficulty_level }}</td>
+              <td>{{ exercise.exercise_type }}</td>
+              <td>{{ exercise.equipment_needed }}</td>
+              <td>
+                <a class="btn btn-primary btn-sm mt-2" href="{% url 'exercise-update' exercise.id %}">Update</a>
+                <a class="btn btn-danger btn-sm mt-2" href="{% url 'exercise-delete' exercise.id %}">Delete</a>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+      </table>
+      {% else %}
+        <div class="text-center">
+          <h4 class="mt-4">No exercises added</h4>
+        </div> 
+      {% endif %}
   </div>
   
 {% endblock content %}
